<resources>
    <string name="app_name">Spot A Bee</string>

    <string name="button">Button</string>

    <string name="bee_sighting">Bee Sighting</string>
    <string name="location">Location</string>
    <string name="flower_type">Flower type</string>
    <string name="any_further_details">Any further details?</string>
    <string name="submit">Submit</string>
    <string name="einstein_quote">Einstein said If the bee disappeared off the surface
        of the globe then man would only have  four years of life left.
        No more bees, no  more pollination, no more plants, no
        more animals, no more manThis single quote captures the
        key role that bees play in the survival of planet earth.
      </string>
    <string name="about_us_title">About Us!</string>
    <string name="download_pdf_fragment_title">Download Our Guide</string>
    <string name="how_to">How #to</string>
    <string name="form">Form</string>
    <string name="donate">Donate</string>
    <string name="about_us">About Us</string>
    <string name="how_to_menu">How to</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="you_have_donated_x">You have donated $%s\n to Spot A Bee</string>
    <string name="flowers_in_cardiff">Flowers in Cardiff</string>

    <string name="home_button_label_camera">Camera</string>
    <string name="home_button_label_form">Upload Information w/out picture</string>
    <string name="home_button_label_gallery">Upload Picture from Gallery</string>

    <string name="channel_name">First Notification</string>
    <string name="channel_description">Notification for X</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_menu_item_home">Home</string>
    <string name="drawer_menu_item_howto">How To</string>
    <string name="drawer_menu_item_results">Results</string>
    <string name="drawer_menu_item_aboutus">About Us</string>
    <string name="drawer_menu_item_form">Form</string>
    <string name="drawer_menu_item_leaderboard">Leaderboard</string>

    <string name="identify_a_flower">Identify a flower</string>
    <string name="details_title">Details</string>
    <string name="flowers_spotted">Flowers Spotted</string>
    <string name="identify_your_flower">Identify your flower</string>
    <string name="time">Time</string>
    <string name="number_of_bees_spotted_on_the_flower">Number of bees on the flower</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="incentive_every_ten_sub_message">Well done! You have now made %d submissions!</string>
    <string name="help_the_bees_more">Please download the PDF made by Friends of the Earth to \nfind out what more you can you to help\nthe bees!</string>
    <string name="download_guide">Download Guide</string>
    <string name="help_the_bees">Help the bees</string>
    <string name="spot_a_bee">spot a bee</string>
    <string name="thanks_for_your_help">Thank you for your help</string>
    <string name="flower_sighting">Flower Sighting</string>
    <string name="thank_you_for_your_help">Thank you for your help!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_now">Pay now</string>
    <string name="donation_completed">Donation completed</string>
    <string name="amount">Amount</string>
    <string name="id">Id</string>
    <string name="thanks_for_your_donation_the_bees_thank_you">Thanks for your donation! The bees thank you!</string>
    <string name="status">Status</string>
    <string name="btnhome">Home</string>
    <string name="state">Status</string>
    <string name="enter_amount_you_d_nlike_to_donate_in">Enter amount you\'d \n like to donate in $</string>
    <string name="amount_here">Amount Here</string>
    <string name="go_to_youtube_to_see_our_mission">Go to YouTube to see our mission</string>
    <string name="go_to_paypal">Go to PayPal</string>
    <string name="papar_onboarding_text_one">"Bees are one of the most"
                + " useful animals on Earth. Without their help in pollination, much"
                + " of the plant life you know today would die out. Bees are in danger,"
                + " and we would like your help in gathering data about them through"
                + " your interactions in everyday life."</string>
    <string name="onboarding_text_two">"Using"
                + " the pictures uploaded by you, we would like to identify which"
                + " plants in Wales are attracting bees, along with the locations"
                + " of those plants. Therefore we can deduce where we need more plant"
                + " life and what kinds of plants to help these bees in their mission."</string>
    <string name="onboarding_text_three">"All you"
                + " need to do to help is to keep an eye out for any bees you might see"
                + " and to snap a picture if you can. On the home screen, there are options"
                + " to take a picture from the app, use an existing photo, or to submit"
                + " information without a picture. "</string>
    <string name="onboarding_heading_one">Welcome!</string>
    <string name="onboarding_heading_two">How We Will Use Data</string>
    <string name="onboarding_heading_three">So How Do I Help?</string>
    <string name="download_pdf_description">Guide on helping to preserve the bee population</string>
    <string name="download_pdf_title">Help the Bees</string>
    <string name="bee_pdf_guide">Bee_Guide.pdf</string>
    <string name="status_failed">Status: FAILED</string>
    <string name="error_cannot_resume">Error: Cannot resume</string>
    <string name="error_device_not_found">Error: Device not found.</string>
    <string name="error_file_already_exists">Error: File already exists.</string>
    <string name="error_file_error">Error: File error</string>
    <string name="error_http_error">Error: HTTP error</string>
    <string name="error_insufficient_space">Error: Insufficient space</string>
    <string name="error_too_many_redirects">Error: Too many redirects</string>
    <string name="error_unhandled_exception">Error: Unhandled HTTP exception</string>
    <string name="error_unknown">Error: Unknown</string>
    <string name="status_paused">Status paused.</string>
    <string name="paused_queue_for_wifi">Paused. Queued for wifi.</string>
    <string name="paused_unknown">Paused. Unknown.</string>
    <string name="paused_waiting_for_network">Paused. Waiting for network.</string>
    <string name="paused_waiting_to_retry">Paused. Waiting to retry.</string>
    <string name="status_pending">Status pending</string>
    <string name="status_running">Status running</string>
    <string name="status_successful">Status successful</string>
    <string name="successfully_downloaded">Successfully downloaded</string>
    <string name="pdf_download">PDF download:</string>
    <string name="notification_title">Spot a Bee</string>
    <string name="notification_content_text">Help the Bees</string>
    <string name="open_your_guide">Open your guide</string>
    <string name="open_your_spot_a_bee_guide">Open your Spot a Bee PDF</string>
    <string name="pdf_download_channel_description">PDF Download</string>
    <string name="pdf_notification_channel_name">Spot a Bee</string>
    <string name="error_toast_message_pay_pal">Please enter numerical characters only. E.g, 10 for $10</string>
    <string name="make_sure_you_sign_in_for_score_message">Make sure you log in next time to add to your score!</string>
    <string name="database_commit_error_message">Sorry. An error occurred. We can\'t save your information right now...</string>
    <string name="good_image_of_a_plant_text">The image on the right is a good plant image, as we can see the entire plant in a clear image. On the right, the image is a bit zoomed in, so we can\'t see the entire flower and would have a hard time guessing what plant that is.</string>
    <string name="donation_amount">Donation amount</string>
    <string name="help_spot_a_bee_by_making_a_donation_to_support_our_research">Help Spot a Bee by making a donation to support our research</string>
    <string name="test_donation">You have donated $17 to Spot A Bee</string>
    <string name="tips_for_taking_photos">Tips for taking photos</string>
    <string name="image_a">Image A</string>
    <string name="image_b">Image B</string>
    <string name="go_home">Go Home</string>
    <string name="internet_unavailable">Internet connection unavailable.</string>
    <string name="obscene_number_message">That is an obscene number of bees to be spotted on one bunch of flowers! Please enter a number less than pr equal to 50.</string>

</resources>
