<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_menu_item_home" />
        <item
            android:id="@+id/nav_howto"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_menu_item_howto" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_menu_item_map" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_menu_item_aboutus" />
    </group>
</menu>