<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/myTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bee_sighting" />

    <FrameLayout
        android:id="@+id/location_n_search"
        android:layout_below="@+id/myTextView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_location"
            android:src="@drawable/ic_search"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/locationField"
            android:layout_marginLeft="30dp"
            android:layout_width="270dp"
            android:hint="@string/location"
            android:layout_marginBottom="50dp"
            android:maxLines="1"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/addressSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationField"
            android:layout_marginTop="50dp">
        </Spinner>
    </FrameLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/flowerField"
        android:layout_width="@dimen/field_width"
        android:layout_below="@+id/location_n_search"
        android:maxLines="1"
        android:hint="@string/flower_type"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/descriptionField"
        android:layout_width="@dimen/field_width"
        android:maxLines="20"
        android:hint="@string/any_further_details"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_height="50dp"
        android:layout_width="120dp"
        android:layout_marginTop="70dp"
        android:text="@string/submit"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/num_changes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        />

</android.support.v7.widget.LinearLayoutCompat>