<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/flower_search"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/flowerIdentify"
            android:src="@drawable/ic_flowervector"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:minHeight="40dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/identifyFlowerMessage"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_toRightOf="@id/flowerIdentify"
            android:layout_marginTop="15dp"
            android:layout_width="270dp"
            android:text="@string/flower_sighting"
            android:maxLines="1"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/location_n_search"
        android:layout_below="@+id/flower_search"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_border"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_location"
            android:src="@drawable/ic_search"
            android:layout_marginTop="30dp"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/locationField"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/search_location"
            android:layout_width="270dp"
            android:hint="@string/location"
            android:background="#fff"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:layout_height="40dp"/>


    </RelativeLayout>

    <Spinner
        android:id="@+id/addressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_n_search"
        android:layout_marginTop="20dp">
    </Spinner>

    <FrameLayout
        android:id="@+id/flower_container"
        android:layout_marginTop="40dp"
        android:layout_below="@id/addressSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/flowerField"
            android:layout_width="@dimen/field_width"
            android:maxLines="1"
            android:layout_height="40dp"
            android:hint="@string/flower_type"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"/>
    </FrameLayout>


    <FrameLayout
        android:id="@+id/num_of_bee_container"
        android:layout_below="@+id/flower_container"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/numOfBees"
            android:layout_width="@dimen/field_width"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:hint="@string/number_of_bees_spotted_on_the_flower"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <FrameLayout
        android:layout_below="@id/num_of_bee_container"
        android:id="@+id/description_container"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/descriptionField"
            android:layout_width="@dimen/field_width"
            android:background="@android:color/transparent"
            android:maxLines="20"
            android:hint="@string/any_further_details"
            android:layout_height="wrap_content" />
    </FrameLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_below="@id/description_container"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:layout_width="120dp"
        android:layout_marginTop="60dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:text="@string/submit"/>


</RelativeLayout>
