<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.spotabee.fragments.PaymentInfo">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="Home"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/linearLayout2">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtHeading"
            android:layout_width="204dp"
            android:layout_height="106dp"
            android:text="@string/thanks_for_your_donation_the_bees_thank_you"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>
