<?xml version="1.0" encoding="utf-8"?>
<!--Made by: C1769948-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/flower_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp">

        <ImageView
            android:id="@+id/flowerIdentify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="40dp"
            android:src="@drawable/ic_flowervector" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/identifyFlowerMessage"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/flowerIdentify"
            android:maxLines="1"
            android:text="@string/flower_sighting"
            android:textSize="20sp" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/flower_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flower_search"
        android:layout_marginTop="29dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/flowerField"
            android:layout_width="@dimen/field_width"
            android:layout_height="20dp"
            android:layout_alignStart="@+id/flower_container"
            android:layout_below="@+id/addressSpinner"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/flower_type"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:textSize="18sp" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/num_of_bee_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/flower_container"
        android:layout_marginTop="35dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/numOfBees"
            android:layout_width="@dimen/field_width"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/number_of_bees_spotted_on_the_flower"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/num_of_bee_container"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/descriptionField"
            android:layout_width="@dimen/field_width"
            android:layout_height="90dp"
            android:layout_above="@+id/button_container"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:hint="@string/any_further_details"
            android:maxLines="20"
            android:padding="15dp"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/button_container"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:background="@android:drawable/dialog_holo_light_frame">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@+id/description_container"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/default_small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </FrameLayout>




</RelativeLayout>
